[#54] Fixed spacing between rows of fields.

--- a/frontend/src/PitchArtWizard/TranscribeAudio.css
+++ b/frontend/src/PitchArtWizard/TranscribeAudio.css
@@ -6,8 +6,12 @@
     width: 1016px;
 }
 
-.metilda-audio-analysis-controls {
+.metilda-audio-analysis-controls-list {
 
+}
+
+.metilda-audio-analysis-controls-list-item {
+    margin-bottom: -32px;
 }
 
 .metilda-audio-analysis {
